src/FinancialForce ERP Core/objects/BatchSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains settings that control the behavior of background processes in FinancialForce ERP.</description>
    <fields>
        <fullName>Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chatter Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaximumQueueSize__c</fullName>
        <label>Batch System Maximum Queue Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MessageDeletionScopeSize__c</fullName>
        <defaultValue>2000</defaultValue>
        <label>Message Deletion Batch Scope Size</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MessageDeliveryChunkingScopeSize__c</fullName>
        <defaultValue>null</defaultValue>
        <description>Overrides the automatic calculation of the number of messages to be chunked for delivery in a batch. If blank, the number of messages is calculated based on the worst case scenario.</description>
        <label>Message Delivery Chunking Scope Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MessageDeliveryErrorDetectionScopeSize__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Overrides the automatic calculation of the number of messages processed when detecting errors in a batch. If blank, the number of messages is calculated based on the worst case scenario.</description>
        <label>Error Detection Scope Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MessageDeliveryMaxLoopCount__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Message Delivery Max Loop Count</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MessageDeliveryPreparationScopeSize__c</fullName>
        <defaultValue>null</defaultValue>
        <description>Overrides the automatic calculation of the number of messages to be prepared for delivery in a batch. If blank, the number of messages is calculated based on the worst case scenario.</description>
        <label>Message Delivery Preparation Scope Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MessageDeliveryRoutingScopeSize__c</fullName>
        <defaultValue>null</defaultValue>
        <description>Overrides the automatic calculation of the number of messages to be routed for delivery in a batch. If blank, the number of messages is calculated based on the worst case scenario.</description>
        <label>Message Delivery Routing Scope Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NotificationRecipients__c</fullName>
        <inlineHelpText>Separate email addresses using semicolons (;)  This field only applies to email and Chatter notifications. Users may not have tasks.</inlineHelpText>
        <label>Notification on objects</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Notification</label>
        <type>Checkbox</type>
    </fields>
    <label>ERP Background Processing Settings</label>
</CustomObject>